// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tw $as props polymorphism should work with class component 1`] = `
<DocumentFragment>
  <a
    class="bg-gray-400"
    href="http://###"
  >
    test
  </a>
</DocumentFragment>
`;

exports[`tw matches snapshot with class component 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-400"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with function component 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-400"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with intrinsic element 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-400"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with two dynamic properties 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-500 p-10"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with two properties & two dynamic properties and maintains class order 1`] = `
<DocumentFragment>
  <div
    class="z-10 bg-gray-500 text-white p-10"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw matches snapshot with two properties 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-500 p-10"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`tw should render Component as html tag in \`$as\` prop 1`] = `
<DocumentFragment>
  <a
    class="bg-red-500"
    href="http://"
  />
</DocumentFragment>
`;

exports[`tw should render base class component as component in \`$as\` prop: test 1 1`] = `
<DocumentFragment>
  <nav
    class="flex h-20 w-full flex-col h-full w-20 text-black bg-gray-500"
  />
</DocumentFragment>
`;

exports[`tw should render component as component in \`$as\` prop: test 1 1`] = `
<DocumentFragment>
  <nav
    class="flex h-20 w-full flex-col h-full w-20 text-black bg-gray-500"
  />
</DocumentFragment>
`;

exports[`tw should render component as component in \`$as\` prop: test 2 1`] = `
<DocumentFragment>
  <nav
    class="flex h-20 w-full bg-red-500"
  />
</DocumentFragment>
`;

exports[`tw should render tag Component as html tag in \`$as\` prop 1`] = `
<DocumentFragment>
  <a
    class="text-black bg-gray-500"
    href="http://"
  />
</DocumentFragment>
`;
